--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -25,7 +25,7 @@
   <key>CFBundleShortVersionString</key>
   <string>0.1.0</string>
   <key>LSUIElement</key>
-  <true/>
+  <false/>
   <key>NSCameraUsageDescription</key>
   <string>Scap does not use the camera.</string>
   <key>NSMicrophoneUsageDescription</key>
